@@ -86,8 +86,10 @@ typedef struct _MOUSE_REGION {
 #define MSYS_DO_RBUTTON_UP			16
 #define MSYS_DO_LBUTTON_REPEAT	32
 #define MSYS_DO_RBUTTON_REPEAT	64
+#define MSYS_DO_WHEEL_UP        0x0080
+#define MSYS_DO_WHEEL_DOWN      0x0100
 
-#define MSYS_DO_BUTTONS					(MSYS_DO_LBUTTON_DWN|MSYS_DO_LBUTTON_UP|MSYS_DO_RBUTTON_DWN|MSYS_DO_RBUTTON_UP|MSYS_DO_RBUTTON_REPEAT|MSYS_DO_LBUTTON_REPEAT)
+#define MSYS_DO_BUTTONS					(MSYS_DO_LBUTTON_DWN | MSYS_DO_LBUTTON_UP | MSYS_DO_RBUTTON_DWN | MSYS_DO_RBUTTON_UP | MSYS_DO_RBUTTON_REPEAT | MSYS_DO_LBUTTON_REPEAT | MSYS_DO_WHEEL_UP | MSYS_DO_WHEEL_DOWN)
 
 // Mouse system button masks
 #define MSYS_LEFT_BUTTON				1
@@ -119,6 +121,9 @@ typedef struct _MOUSE_REGION {
 //supports double clicks and single clicks, make sure the DOUBLECLICK event is checked first (rejecting
 //the LBUTTON_DWN event if detected)
 #define MSYS_CALLBACK_REASON_LBUTTON_DOUBLECLICK	1024
+
+#define MSYS_CALLBACK_REASON_WHEEL_UP            0x0800
+#define MSYS_CALLBACK_REASON_WHEEL_DOWN          0x1000
 
 
 #ifdef __cplusplus
